--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
  * This generated file contains a sample Java project to get you started.
  * For more details take a look at the Java Quickstart chapter in the Gradle
  * user guide available at https://docs.gradle.org/3.4.1/userguide/tutorial_java_projects.html
- */
+ */    
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
@@ -30,3 +30,10 @@ dependencies {
 // Define the main class for the application
 mainClassName = 'ohtu.ohtuvarasto.Main'
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+    }
+}
+
+apply plugin: 'jacoco'
